# uniconnect-mobile

./: pyproject.toml
src/: main.py
src/events/: auth.py  publicar.py
src/utilidades/: apis.py
src/views/: foto.py  home.py  login.py  registro.py
