[project]
name = "uniconnect"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "flet==0.25.1",
  "anyio==4.7.0",
  "certifi==2024.8.30",
  "charset-normalizer==3.4.0",
  "h11==0.14.0",
  "httpcore==1.0.7",
  "httpx==0.28.1",
  "idna==3.10",
  "oauthlib==3.2.2",
  "repath==0.9.0",
  "requests==2.32.3",
  "six==1.17.0",
  "sniffio==1.3.1",
  "urllib3==2.2.3"
]


[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "uniconnect"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2024 by Flet"

[tool.flet.app]
path = "src"